fixed layout issues

--- a/root/assets/css/universal.css
+++ b/root/assets/css/universal.css
@@ -470,6 +470,9 @@ select {
     justify-content: center;
 }
 
+.titanic {
+    float: none;
+}
 
 .subtitle {
     margin-top: 30px;
